styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
body{
    margin: 0;
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    flex: 1;
}

.HeaderHero{
    background-color: #1F2937;
    width: 100%;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding-bottom: 50px;
    gap: 100px;
}

.header{
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    color: #f9faf8;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%;
    max-width: 1100px;    
    padding-top: 25px;
}

ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
}

a{
    text-decoration: none;
    color: #E5E7EB;
}


.right-links{
    display: flex;
    gap: 25px;
}


.Hero{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: 1100px;
    padding-bottom: 60px;
}

.Hero-Text{
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: 480px;
    margin: 0;
    gap: 10px;
}

.Hero-Button{
    background-color: #3882f6;
    color: white;
    font-weight: bold;
    font-size: 20px;
    width: 160px;
    border-radius: 8px;
    padding: 8px 4px;
}

.Hero-Header, .Hero-Parag{
    margin: 0;
    padding: 0;
}

.Hero-Header{
    display: flex;
    flex-wrap: wrap;
    width: 400px;
    color: #f9faf8;
    font-size: 48px;
    font-weight: 900;
}

.Hero-Parag, .right-links, .cta-subtext, .footer{
    color: #E5E7EB;
    font-size: 18px;
    font-family: 'Roboto', sans-serif;
}

.middleContent{
    display: flex;
    flex-direction: column;
}

.MidText{
    font-family: 'Roboto', sans-serif;
    text-align: center;
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
    padding-top: 50px;
}

.C1{
    font-family: 'Roboto', sans-serif;
    width: 175px;
    text-align: center;
    padding-top: 50px;
}

.c-image{
    border: 5px solid #3882f6;
    border-radius: 20px;
}

.c-parag{
    color: rgb(82, 82, 82);
    margin: 0;
    padding: 0;
    font-size: 18px;
}

.content{
    display: flex;
    justify-content: center;
    gap: 60px;
    padding-bottom: 100px;
}

.quote{
    background-color: #E5E7EB;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 120px;
    padding-bottom: 120px;
}

.q-text{
    display: flex;
    flex-wrap: wrap;
    font-size: 36px;
    font-style: italic;
    font-weight: 300;
    width: 790px;
    font-family: 'Roboto', sans-serif;
}

.q-author{
    display: flex;
    justify-content: flex-end;
    width: 750px;
    font-size: 22px;
    font-family: 'Roboto', sans-serif;
}

.CallToAction{
    background-color: #ffffff;
    padding: 100px 200px;
}

.cta-container{
    border: 1px #1F2937 solid;
    background-color: #3882f6;
    display: flex;
    justify-content: space-around;
    padding-top: 50px;
    padding-bottom: 50px;
    padding-left: 40px;
    border-radius: 8px;
}

.cta-content{
    display: flex;
    flex-direction: column;
}

.cta-text{
    font-family: 'Roboto', sans-serif;
    font-weight: bold;
    font-size: 24px;
    color: white;
}

.cta-button{
    background-color: #3882f6;
    border: 3px solid white;
    border-radius: 8px;
    color: white;
    font-family: 'Roboto', sans-serif;
    font-weight: bold;
    font-size: 18px;
    height: 40px;
    padding: 0px 30px;
    padding-top: 2px;
}

.footer{
    background-color: #1F2937;
    width: 100%;
    margin-top: auto;
    text-align: center;
    padding: 35px;
}

